CR-2009-03-05-0: Bugfix:     o wait_for_end_of_all_jobs():
                               Wait until all jobs disappeared from spooling
                               framework before returning
                             o new procedure: get_spooled_jobs()
                               Return currently spooled jobs (via spooling
                               framework)
                             o analyze_directory_structure(): 
                               last parameter is now optional
                             o fixed bug in scripts/analyze_dir.sh:
                               if directory had no entries the script returned
                               error message as directory name
                             o refactoring: renamed submit_job() in file
                               "submitter.tcl" to submitter_submit_job(). The
                               procedure name "sumbit_job()" already exists
                               in file "sge_procedures.tcl" 
                 Review:     MD

RH-2009-03-04-0: Enhancem.:  testsuite_shutdown method logs the exit code
                 Review:     CR

MP-2009-03-03-0: Enhancem.:  Added test for IZ 2755
                 Issue:      2755
                 Review:     CR

CR-2009-03-03-1: Bugfix:     fixed tests to support 60 version tests
                             (qhost, qresub, execd reconnect, scheduler
                              reconnect)
                 Review:     RD

CR-2009-03-03-0: Enhancem.:  o new test for IZ #505
                 Issue:      288
                             o shutdown_core_system(): also look for core 
                               files in product root (SGE_ROOT) directory
                             o check_for_core_files(): new optional parameter
                               for deleteing core files if found
                             o new procedure: startup_execd_with_fd_limit()
                             o new procedure: get_FD_SETSIZE_for_host()