@@ -189,9 +189,12 @@ proc schedd_reconnect_after_timeout_test {} {
       set_config my_config
       after 5000
       set my_timeout 90
-      if {$ts_config(gridengine_version) < "61"} {
+      if {$ts_config(gridengine_version) <= "61"} {
+         # Reason for a larger timeout for this versions is that the client does
+         # a check qmaster alive every 240 seconds which might be the reason for
+         # the long time needed until client tries to reconnect.
          set my_timeout [expr (240 + 30)]
-         ts_log_fine "using larger timeout for ge version < 61! ($my_timeout s)"
+         ts_log_fine "using larger timeout for ge version <= 61! ($my_timeout s)"
       }
       if {[wait_for_connected_scheduler $my_timeout] == 0 } { 
          set schedd_reconnect_test_globals(restart_master) false
