@@ -1,3 +1,6 @@
+CR-2009-03-05-1: Bugfix:     fixed scheduler reconnect test for 61 versions
+                 Review:     MD
+
 CR-2009-03-05-0: Bugfix:     o wait_for_end_of_all_jobs():
                                Wait until all jobs disappeared from spooling
                                framework before returning
